add some dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
     }
 }
 
@@ -48,4 +49,6 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.rmtheis:tess-two:6.2.0'
     compile project(':app-debug')
+    compile files('libs/iText-2.0.8.jar')
+    compile files('libs/core-render.jar')
 }
