--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        jackOptions {
+            enabled true
+        }
+    }
+    dexOptions {
+        incremental true
     }
     buildTypes {
         release {
@@ -19,6 +24,11 @@ android {
         }
     }
     productFlavors {
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+
     }
 }
 
