--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <activity
             android:name=".ImageListActivity"
             android:launchMode="singleInstance">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".PhotoDetailActivity"
@@ -45,13 +49,12 @@
         </activity>
         <activity
             android:name=".NoteRichEditor"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity android:name=".PdfViewer" />
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity android:name=".OcrActivity" />
     </application>
